--- a/Web Development/Assignment-2/index.html
+++ b/Web Development/Assignment-2/index.html
@@ -21,7 +21,7 @@
                     </select>
                 </div>
                 <div class="area">
-                    <div class="left">
+                    <div class="form-column">
                         <label class="lab" for="firstname">First name :-</label> 
                         <label class="lab" for="Middlename">Middle name :-</label>
                         <label class="lab" for="lastname">Last name :-</label>
@@ -30,7 +30,7 @@
                         <label class="lab" for="cpassword">confirm password :-</label>
                         <label class="lab" for="files">Upload your file :-</label>
                     </div>
-                    <div class="right">
+                    <div class="form-column">
                         <input id="fname" type="text" placeholder="Enter your firstname">
                         <input id="mname" type="text" placeholder="Enter your Middlename">
                         <input id="lname" type="text" placeholder="Enter your lastname">
